[gd_scene load_steps=2 format=2]

[ext_resource path="res://Blinker/Blinker.gd" type="Script" id=1]

[node name="Blinker" type="Node"]
script = ExtResource( 1 )

[node name="IntervalTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IntervalTimer" to="." method="_on_IntervalTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
